--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/TELEZEN/Aniebots/",
+  "repository": "https://github.com/TELEZEN/usebot/",
   "website": "https://github.com/TELEZEN/Aniebots/",
   "success_url": "https://t.me/Aniebotsupports",
   "env": {
